<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

        <TextView
        android:id="@+id/notif_xposed"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20.0sp"
        android:textStyle="bold"
        android:text="@string/notif_xposed" />

    <TextView
        android:id="@+id/desc_time_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/def_count_text" />

    <EditText
        android:id="@+id/et0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/def_count"
        android:inputType="number"
        android:numeric="integer"
        android:singleLine="true" />

    <TextView
        android:id="@+id/days_time_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/days_count_text" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/days_count"
        android:inputType="number"
        android:numeric="integer"
        android:singleLine="true" />

    <Button
        android:id="@+id/bt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_but" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hint_apply" />

</LinearLayout>
